# Tongues

./: README.md  app.py  custom.css  for victoria and sunny (delete later).md  index.html  pyproject.toml  render.yaml  requirements.txt  run.html  strategy.html  technical.html
src/: app.py  decision_engine.py  lseg_client.py  lseg_worker.py
src/deviltongues/: fetch_options.py  utilities.py
src/example files/: vol_smile.ipynb
src/static/: index.html  style.css
