[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "deviltongues"
version = "0.0.1"
description = "Track and view options and vol information from LSEG"
readme = "README.md"
requires-python = ">=3.12, <3.13"
license = "MIT"
authors = [
    { name = "Jake Vestal", email = "jmv13@duke.edu" },
    # please add, maybe not your MAIN email, but an email you can use for
    #    this project
]
keywords = ["arbitrage", "options", "LSEG"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "ipywidgets",
    "matplotlib",
    "plotly",
    "refinitiv.data",
    "shiny",
    "types-pytz>=2022.1.1"
]

[project.urls]
Homepage = "https://http://deviltongues.website/"
Documentation = "https://deviltongues.website/"
Repository = "https://github.com/deviltongues/Tongues.git"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/deviltongues"]